# test-task-azure

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  install_dependencies.sh
include/: cloud_storage.h  credentials.h  options_parser.h
src/: cloud_storage.cpp  cloud_storage.h  credentials.cpp  main.cpp  options_parser.cpp  options_parser.h
